--- a/snippets/order-history-Admin.liquid
+++ b/snippets/order-history-Admin.liquid
@@ -19,9 +19,9 @@
     	  <select id="select_rg" onchange="changeRegion(this.value); this.title = this.options[this.selectedIndex].innerHTML;" title="" class="" order_id="{% raw %}{{id}}{% endraw %}" status="{% raw %}{{fulfillment_status}}{% endraw %}">
             <option value="" selected>All</option>
             <option value='Region:NorthEast'>North East</option>
-            <option value='Region:SouthEast'>South East</option>
+            <option value='Region:SouthEast'>Sunbelt</option>
             <option value='Region:California'>California</option>
-            <option value='Region:MidAtlantic'>Mid Atlantic</option>
+            <option value='Region:MidAtlantic'>Metro Atlantic</option>
             <option value='Region:Mountain'>Mountain</option>
             <option value='Region:MidWest'>Mid West</option>
             <option value='Region:S0uth'>South</option>
