--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -1,3 +1,7 @@
+{% layout none %}
+<meta content="0; url=/pages/welcome" http-equiv="refresh" />
+{% continue %}
+
 {% if customer %}
   {% if customer.tags contains 'Region:NorthEast' or customer.tags contains 'Region:SouthEast' %}
 	{% if customer.tags contains 'Region:NorthEast' %}
