--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -1,3 +1,14 @@
+{% include 'customer-account-common-code' with 'theme-layout-code' %}
+
+{% if checkout.attributes["Parent ID"] == blank %}    
+  <meta content="0; url=/cart" http-equiv="refresh" />
+  {% continue %}
+{% endif %}
+
+{% if checkout.attributes["Budget Code"] != blank %}
+  {% assign fs_shop_active = true %}
+{% endif %}
+
 <!DOCTYPE html>
 <html lang="{{ locale }}" dir="{{ direction }}" class="{{ checkout_html_classes }}">
   <head>
@@ -10,6 +21,29 @@
 
     {{ content_for_header }}
 
+    {% if settings.favicon %}
+      {% if fs_shop_active %}
+        {% assign settings_favicon = settings.favicon_mod %}
+        <link href="//fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet" type="text/css" media="all" />
+        <style> *{ font-family: "Ubuntu","HelveticaNeue","Helvetica Neue",sans-serif !important; } </style>
+        <style type="text/css">
+          *{ border-radius: 2px !important; }
+        </style>
+      {% else %}
+        {% assign settings_favicon = settings.favicon %}
+      {% endif %}
+      <link rel="shortcut icon" href="{{ settings_favicon | img_url: '32x32' }}" type="image/png" />
+    {% endif %}
+
+    <script type="text/javascript">console.log('{{ checkout. }}');</script>
+
+    <script type="text/javascript">
+      // if(document.referrer.indexOf() == -1){
+      //   window.location.assign("/cart");
+      // }
+      console.log("Refere:"+document.referrer);
+    </script>
+
     {{ checkout_stylesheets }}
     {{ checkout_scripts }}
 
@@ -19,12 +53,37 @@
       .total-recap__final-price{ visibility: hidden !important; }
     </style>
 
+    <!-- BeginConsistentCartAddon -->  <script>  {% if customer %}  Shopify.merge_cart_text = '{{ "consistent_cart_addon.merge_cart_text" | t }}' ;  Shopify.customer_logged_in = true ;  Shopify.customer_email = "{{ customer.email }}" ;  Shopify.log_uuids = true;  {% else %}  Shopify.customer_logged_in = false ;  Shopify.customer_email = "" ;  Shopify.log_uuids = true;  {% endif %}  </script>  
+    <!-- EndConsistentCartAddon -->
+
+    <!--BeginCFFPersistentCartCart-->
+    {% if customer %}
+      <script>
+        // console.log('csu:{{current_shop_url}}');
+        window.cffCustomer = {
+            name: '{{customer.name}}',
+            email: '{{customer.email}}',
+            hasAccount: '{{customer.has_account}}',
+            id: '{{customer.id | hmac_sha1: current_shop_url}}'
+        };
+      </script>
+    {% endif %}
+
+    <script>
+        window.cffPCLiquidPlaced = true
+    </script>
+
+    <!--EndCFFPersistentCartCart-->
   </head>
   <body>
     {{ skip_to_content_link }}
     <div class="banner" data-header>
       <div class="wrap">
-        {{ content_for_logo }}
+        {% if fs_shop_active %}
+          {{ content_for_logo | replace: "//cdn.shopify.com/s/files/1/2142/6089/files/HOR_LOGO1.png", "//cdn.shopify.com/s/files/1/2142/6089/files/2347F4DE-5297-4B7A-89E2-76796C8A62C2__png.jpg" }}
+        {% else %}
+          {{ content_for_logo }}
+        {% endif %}
       </div>
     </div>
 
@@ -34,7 +93,12 @@
       <div class="wrap">
         <div class="main" role="main">
           <div class="main__header">
-            {{ content_for_logo }}
+            {% if fs_shop_active %}
+              {{ content_for_logo | replace: "//cdn.shopify.com/s/files/1/2142/6089/files/HOR_LOGO1.png", "//cdn.shopify.com/s/files/1/2142/6089/files/2347F4DE-5297-4B7A-89E2-76796C8A62C2__png.jpg" }}
+            {% else %}
+              {{ content_for_logo }}
+            {% endif %}
+        
             {{ breadcrumb }}
             {{ alternative_payment_methods }}
           </div>
@@ -58,14 +122,11 @@
 
     {{ tracking_code }}
 
-    {% include 'customer-account-common-code' with 'theme-layout-code' %}
-
-
-      {% if customer.tags contains region_NorthEast %}
-    	<style>
-          .content-box__row:nth-of-type(2){ display:none; }
-        </style>
-      {% endif %}
+    {% if customer.tags contains region_NorthEast %}
+  	<style>
+        .content-box__row:nth-of-type(2){ display:none; }
+      </style>
+    {% endif %}
 
     <script>
         var payment_cc, payment_cd;
