--- a/snippets/fs-order-history-Manager.liquid
+++ b/snippets/fs-order-history-Manager.liquid
@@ -1,51 +1,52 @@
-<div id="order-list" style="display:none;">
+<div id="order-list" style1="display:none;">
   	<div class="w3-row printModeExclude">
-    	<div class="w3-col m2" styles="position:relative;">
-          <small class="nbsp-hide"><label for="">Date Filter</label></small>
-    	  <input id="start_date" value="{{first_order}}" readonly class="datepicker" type="text" name="start_date" placeholder="Start Date" >
-          <button type="button" disabled class="btn btn--secondary w3-padding-01 w3-padding-top1 w3-padding-bottom1 w3-border-black w3-small clear-filter hide" disabled1 style="position:absolute; bottom: 22.75px; right:10px; z-index:; display:none; padding:0 5px; font-size:3px;"><i class="fa fa-times"></i></button>
+    	<div class="w3-col m2">
+        <small class="nbsp-hide"><label for=""><small class="nbsp-hide placeholdLoader">Date Filter</small></label></small>
+    	  <input id="start_date" value="{{first_order}}" readonly class="datepicker placeholdLoader" type="text" name="start_date" placeholder="Start Date" >
     	</div>
-      	<div class="w3-col m2 w3-row-padding">
-          <small class="nbsp-hide"><label for="">&nbsp;</label></small>
-    	  <input id="end_date" value="{{'now' | date: '%m/%d/%Y'}}" readonly class="datepicker" type="text" name="end_date" placeholder="End Date" >
+    	<div class="w3-col m2 w3-row-padding" styles="position:relative;">
+        <small class="nbsp-hide"><label for="">&nbsp;</label></small>
+    	  <input id="end_date" value="{{'now' | date: '%m/%d/%Y'}}" readonly class="datepicker placeholdLoader" type="text" name="end_date" placeholder="End Date" >
+        <button type="button" disabled class="btn btn--secondary w3-padding-01 w3-padding-top1 w3-padding-bottom1 w3-border-black w3-small clear-filter hide1 placeholdLoader" disabled1 style="position:absolute; bottom: 22.75px; right:15px; z-index:; display:none; padding:0 5px; font-size:3px;"><i class="fa fa-times"></i></button>
     	</div>
-      	<div class="w3-col m3">
-          <small class="nbsp-hide"><label for="">&nbsp;</label></small>
-          <button id="" class="btn btn--secondary btn--full1 clear-filter" type="button" style="display:none;" >Clear</button>
-    	  <button id="filter_order" class="btn btn--secondary btn--full1" type="button" >Filter Dates</button>
+    	<div class="w3-col m2">
+        <small class="nbsp-hide"><label for="">&nbsp;</label></small>
+        {% comment %}<button id="" class="btn--secondary btn--full1 clear-filter placeholdLoader" type="button" style="display:none;" >Clear</button>{% endcomment %}
+    	  <button id="filter_order" class="btn--secondary btn--full1 placeholdLoader" type="button" >Filter Dates</button>
     	</div>
-      	<div id="td_select" class="w3-col m3 w3-row-padding">
-          <small><label for="select_tml"><br class="br-hide">Filter By Team Members</label></small>
-    	  <select id="select_tml" onchange="changeUser(this.value); this.title = this.options[this.selectedIndex].innerHTML;" title="" class="assign-printer" order_id="{% raw %}{{id}}{% endraw %}" status="{% raw %}{{fulfillment_status}}{% endraw %}">
+      <div class="w3-col m2">
+        {% include 'customer-account-common-code' with 'order-search-bar' %}
+      </div>
+    	<div id="td_select" class="w3-col m2 w3-row-padding">
+        <small><label for="select_tml"><small class="placeholdLoader"><br class="br-hide">Filter By Team Members</small></label></small>
+    	  <select id="select_tml" onchange="changeUser(this.value); this.title = this.options[this.selectedIndex].innerHTML;" title="" class="assign-printer placeholdLoader" order_id="{% raw %}{{id}}{% endraw %}" status="{% raw %}{{fulfillment_status}}{% endraw %}">
             <option value="" selected>All</option>
             <option value="{{ customer.id }}">My Orders</option>
             <option w3-repeat="customers" value="{% raw %}{{id}}{% endraw %}" title="{% raw %}{{first_name}} {{last_name}}{% endraw %}" select="{% raw %}{{selected}}{% endraw %}">{% raw %}{{email}}{% endraw %}</option>
           </select>
     	</div>
       	<div id="td_select" class="w3-col m2">
-          <small><label for="select_tl"><br class="br-hide">Additional Filters</label></small>
-    	  <select id="select_tl" onchange="if(this.selectedIndex == 3)updateState({page: '1',fulfillment_status: '',order_status: this.value}); else updateState({page: '1',fulfillment_status: this.value,order_status: ''});" name="fulfillment_status">
+          <small><label for="select_tl"><small class="placeholdLoader"><br class="br-hide">Additional Filters</small></label></small>
+          <select id="select_tl" onchange="params={page: '1', order_status: '', assigned_designer: ''}; params[$(this).find('option:selected').attr('filter_attr')]=this.value; updateState(params);" name="order_status" class="placeholdLoader">
             <option value="" selected>Clear Additional Filters</option>
-            <option value="fulfilled">Fulfilled</option>
-            <option value="unfulfilled">Unfulfilled</option>
-            <option value="cancelled">Cancelled</option>
+            {% include 'customer-account-common-code' with 'order-status-option-code-fs' %}
           </select>
     	</div>
     </div>
-  <table id="id02" class="responsive-table w3-table w3-bordered w3-striped">
+  <table id="id02" class="responsive-table w3-table w3-bordered w3-striped1">
     <thead>
       <tr class="w3-text-white" style="background-color: {{ settings.color_topbar_bg }}">
-        {% include 'customer-account-common-code' with 'table-header-code' %}
+        {% include 'customer-account-common-code' with 'table-header-code-fs' %}
       </tr>
     </thead>
-    <tr w3-repeat="orders">
-      <th class="w3-text-orange1 orders text-center" id="{% raw %}{{id}}{% endraw %}"><a class="{% raw %}{{cancel_status}}{% endraw %}" href="/pages/order?id={% raw %}{{id}}{% endraw %}">{% raw %}{{order_name}}{% endraw %}</a></th>
-      <td class="text-center" title="{% raw %}{{customer_last_email}}{% endraw %}">{% raw %}{{customer_last_name}}{% endraw %}</td>
-      <td class="text-center">{% raw %}{{discount_codes}}{% endraw %}</td>
-      <td class="text-center">{% raw %}{{order_date}}{% endraw %}</td>
+    <tr class="w3-hover-light-grey" w3-repeat="orders">
+      <th class="w3-text-orange1 orders text-center" id="{% raw %}{{id}}{% endraw %}"><a class="{% raw %}{{cancel_status}}{% endraw %} placeholdLoader" href="/pages/order?id={% raw %}{{id}}{% endraw %}"><b>{% raw %}{{order_name}}{% endraw %}</b></a></th>
+      <td class="text-center" title="{% raw %}{{customer_last_email}}{% endraw %}"><div class="placeholdLoader">{% raw %}{{customer_first_name}} {{customer_last_name}}{% endraw %}</div></td>
+      <td class="text-center"><div class="placeholdLoader">{% raw %}{{discount_codes}}{% endraw %}</div></td>
+      <td class="text-center"><div class="placeholdLoader">{% raw %}{{order_date}}{% endraw %}</div></td>
       {% comment %}<td>{% raw %}{{payment_status}}{% endraw %}</td>{% endcomment %}
       {% comment %}<td class="text-right">${% raw %}{{total}}{% endraw %}</td>{% endcomment %}
-      <td class="text-center">{% raw %}{{order_status}}{% endraw %}</td>
+      <td class="text-center" order_status="{% raw %}{{order_status}}{% endraw %}"><div class="placeholdLoader">{% raw %}{{order_status}}{% endraw %}</div></td>
     </tr>
   </table>
     
@@ -57,7 +58,7 @@
 
 <script>
   
-  {% include 'customer-account-common-code' with 'init-variables' %}
+  {% include 'customer-account-common-code' with 'init-variables-fs' %}
   
 //   fetch_Orders('','','','');
 //   setTimeout(fetch_TeamUsers(),0);
@@ -70,17 +71,17 @@
   
     {% include 'customer-account-common-code' with 'doc-ready-code' %}
     
-    setTimeout(fetch_AllUsers,0);
+    setTimeout(fetch_AllUsers, 0);
     setTimeout(fetch_TeamUsers,100);
     
     
   });
   
   
-  {% include 'customer-account-common-code' with 'methods' %}
+  {% include 'customer-account-common-code' with 'methods-fs' %}
   
   
-  function fetch_Orders(start_date, end_date, page, cid){
+  function fetch_Orders(){ //start_date, end_date, page, cid
 //     var1 = start_date;
 //     var2 = end_date;
 //     var3 = page;
@@ -92,15 +93,17 @@
 //     if(page.length != 0){ data.page = page }
 //     if(cid.length != 0){ data.customer_id = cid }
   
-     {% include 'customer-account-common-code' with 'fetchOrders-code' %}
-                
+     {% include 'customer-account-common-code' with 'fetchOrders-code-fs' %}
+     defreez(); defreez(); $('.placeholdLoader1').addClass('placeholdLoader').removeClass('placeholdLoader1');
+     $('.table-wrapper').addClass('overflow-hidden');
+
   	 $.ajax({
-          url: '/apps/pepsi-print/collection_response/get_orders_list.json',
+          url: '/apps/pepsi-print/fs_collection_response/get_orders_list.json',
           type: 'GET',
           data: data,
           dataType: 'json',
           success: function(data){
-//             	console.log(JSON.stringify(data));
+            	// console.log(JSON.stringify(data)); 
             	if(data["total_entries"] > 0){
                   calcT(data); //, start_date, end_date, page, cid);
                   
@@ -115,17 +118,19 @@
                   $("#print-btn").removeAttr('disabled').prop('title', '').css('cursor', 'default');
                                     
                   
-				}else{
+      				}else{
                   $("#id02, .per_pageContainer").hide();
-                  $("#order-none").show();
+                  $("#order-none, #order-list").show();
                   $("#print-btn").prop('disabled','disabled').prop('title', 'No orders to print.').css('cursor', 'not-allowed');
-                  $.unblockUI();
+                  defreez();
                 }
-            	$.unblockUI();
+            	defreez();
+              $('.placeholdLoader').addClass('placeholdLoader1').removeClass('placeholdLoader');
+              $('.table-wrapper').removeClass('overflow-hidden');
                 
           },
           error: function(){
-            $.unblockUI; show_message2('Error in fetching Orders.',false);
+            defreez(); show_message2('Error in fetching Orders.',false);
           }
           
 	 	});
@@ -135,11 +140,11 @@
   function fetch_TeamUsers(state){
       var i = 0;
       $.ajax({
-          url: '/apps/pepsi-print/collection_response/get_customers_list.json',
+          url: '/apps/pepsi-print/fs_collection_response/get_customers_list.json',
           type: 'GET',
           data: { cemail: "{{ customer.email }}", ctoken: "{{ customer.id  | hmac_sha1: shop.domain }}" },
           dataType: 'json',
-          success: function (data) { console.log(JSON.stringify(data));
+          success: function (data) { //console.log(JSON.stringify(data));
                  	
                     if(data.status == 'ok' && data.customers != undefined ){
                  
@@ -148,25 +153,25 @@
                     ).done(setTimeout(afterDisplay,1000));
                       function afterDisplay(){
                         $('#selected_team').show();
-                        $select_team = $('#select_team select'); console.log($select_team.html());
-                        $select_team.find("option").removeAttr('disabled'); console.log($('#select_tml').html());
+                        $select_team = $('#select_team select'); //console.log($select_team.html());
+                        $select_team.find("option").removeAttr('disabled'); //console.log($('#select_tml').html());
                         $('#select_tml option').each(function(index, item){
                           if(index > 1){
-                            $val = $(item).attr('value'); console.log($val+','+JSON.stringify(item)+','+index);
+                            $val = $(item).attr('value'); //console.log($val+','+JSON.stringify(item)+','+index);
                             $select_team.find("option[value = "+$val+"]").prop('disabled', 'disabled');
                           }
-                        });console.log('team fetched');
+                        }); //console.log('team fetched');
                       }
                     }
                     else{
                       $('#selected_team, #select_tml option:eq(2)').hide();
                       $('#select_team select option').removeAttr('disabled');
                     }
-                 	$.unblockUI();
+                 	defreez();
 
           },
           error: function(){
-            $.unblockUI; show_message2('Error in fetching TeamList.',false);
+            defreez(); show_message2('Error in fetching TeamList.',false);
           }
 
       });
@@ -175,17 +180,17 @@
   function fetch_AllUsers(){
       var i = 0;
       $.ajax({
-          url: '/apps/pepsi-print/collection_response/get_all_customers_list.json',
+          url: '/apps/pepsi-print/fs_collection_response/get_all_customers_list.json',
           type: 'GET',
           data: { cemail: "{{ customer.email }}", ctoken: "{{ customer.id  | hmac_sha1: shop.domain }}" },
           dataType: 'json',
           success: function (data) { //console.log(JSON.stringify(data));
                  	w3DisplayData('select_team', data);
-                 	$.unblockUI();
+                 	defreez();
 
           },
           error: function(){
-            $.unblockUI; show_message2('Error in fetching Users.',false);
+            defreez(); show_message2('Error in fetching Users.',false);
           }
 
       });
@@ -204,11 +209,11 @@
   function editTeam(obj,status){
     freez();
     if(status){
-      url = '/apps/pepsi-print/customer/assign_manager_to_site_user.json';
+      url = '/apps/pepsi-print/fs_customer/assign_manager_to_site_user.json';
       cid = $(obj).val();
     }
     else{
-      url = '/apps/pepsi-print/customer/remove_manager_from_site_user.json';
+      url = '/apps/pepsi-print/fs_customer/remove_manager_from_site_user.json';
       cid = $(obj).attr('value');
     }
     
@@ -238,7 +243,7 @@
                   if(var_customer_id == cid)
                     updateState({customer_id: ''});
                   	
-                  	//$.unblockUI; 
+                  	//defreez(); 
                   setTimeout(function(){
                     if(status){
                       $('#select_team option[value="'+cid+'"]').attr('disabled','disabled');
@@ -258,16 +263,16 @@
                   },100);
                   	
                 }else if(401 === Number(data.status)){
-                  	$.unblockUI; show_message2(data.message,false);
+                  	defreez(); show_message2(data.message,false);
                 }else{
-                	$.unblockUI; show_message2(data.message,false); console.log('else');
+                	defreez(); show_message2(data.message,false); console.log('else');
                 }
            
             
             	
           },
           error: function(data){
-            $.unblockUI; show_message2('Some Error Occured.',false);
+            defreez(); show_message2('Some Error Occured.',false);
           }
           
 	 });
@@ -275,5 +280,5 @@
     
    }
   
-  
+  {% include 'customer-account-common-code' with 'reorder-method' %}
 </script>
