--- a/snippets/fs-order-history-User.liquid
+++ b/snippets/fs-order-history-User.liquid
@@ -1,43 +1,53 @@
-<div id="order-list" style="display:none;">
+<div id="order-list" style1="display:none;">
   <div class="w3-row printModeExclude">
-      <div class="w3-col m2" style="position:relative;">
-        <small class="nbsp-hide"><label for="">Date Filter</label></small>
-        <input id="start_date" value="{{first_order}}" readonly class="datepicker" type="text" name="start_date" placeholder="Start Date" >
-        <button type="button" disabled class="btn btn--secondary w3-padding-01 w3-padding-top1 w3-padding-bottom1 w3-border-black w3-small clear-filter hide" disabled1 style="position:absolute; bottom: 22.75px; right:10px; z-index:; display:none; padding:0 5px; font-size:3px;">Clear Dates</button>
+      <div class="w3-col m2">
+        <small class="nbsp-hide"><label for=""><small class="placeholdLoader">Date Filter</small></label></small>
+        <input id="start_date" value="{{first_order}}" readonly class="datepicker placeholdLoader" type="text" name="start_date" placeholder="Start Date" >
       </div>
-      <div class="w3-col m2 w3-row-padding">
+      <div class="w3-col m2 w3-row-padding" style="position:relative;">
         <small class="nbsp-hide"><label for="">&nbsp;</label></small>
-        <input id="end_date" value="{{'now' | date: '%m/%d/%Y'}}" readonly class="datepicker" type="text" name="end_date" placeholder="End Date" >
+        <input id="end_date" value="{{'now' | date: '%m/%d/%Y'}}" readonly class="datepicker placeholdLoader" type="text" name="end_date" placeholder="End Date" >
+        <button type="button" disabled class="btn btn--secondary w3-padding-01 w3-padding-top1 w3-padding-bottom1 w3-border-black w3-small clear-filter hide1 placeholdLoader" disabled1 style="position:absolute; bottom: 22.75px; right:15px; z-index:; display:none; padding:0 5px; font-size:3px;"><i class="fa fa-times"></i></button>
       </div>
-      <div class="w3-col m5">
+      <div class="w3-col m2">
         <small class="nbsp-hide"><label for="">&nbsp;</label></small>
-        <button id="" class="btn btn--secondary btn--full1 clear-filter" type="button" style="display:none;" >Clear Dates</button>
-        <button id="filter_order" class="btn btn--secondary btn--full1" type="button" >Filter Dates</button>
+        {% comment %}<button id="" class="btn--secondary btn--full1 clear-filter placeholdLoader" type="button" style="display:none;" >Clear Dates</button>{% endcomment %}
+        <button id="filter_order" class="btn--secondary btn--full1 placeholdLoader" type="button" >Filter Dates</button>
+      </div>
+      <div class="w3-col m3">
+        {% include 'customer-account-common-code' with 'order-search-bar' %}
       </div>
       <div id="td_select" class="w3-col m3">
-        <small><label for="select_tl"><br class="br-hide">Additional Filters</label></small>
-        <select id="select_tl" onchange="if(this.selectedIndex == 3)updateState({page: '1',fulfillment_status: '',order_status: this.value}); else updateState({page: '1',fulfillment_status: this.value,order_status: ''});" name="fulfillment_status">
+        <small><label for="select_tl"><small class="placeholdLoader"><br class="br-hide">Additional Filters</small></label></small>
+        <select id="select_tl" onchange="params={page: '1', order_status: '', assigned_designer: ''}; params[$(this).find('option:selected').attr('filter_attr')]=this.value; updateState(params);" name="order_status" class="placeholdLoader">
           <option value="" selected>Clear Additional Filters</option>
-          <option value="fulfilled">Fulfilled</option>
-          <option value="unfulfilled">Unfulfilled</option>
-          <option value="cancelled">Cancelled</option>
+          {% include 'customer-account-common-code' with 'order-status-option-code-fs' %}
         </select>
       </div>
   </div>
-  <table id="id02" class="responsive-table w3-table w3-bordered w3-striped">
+  <table id="id02" class="responsive-table w3-table w3-bordered w3-striped1">
     <thead>
       <tr class="w3-text-white" style="background-color: {{ settings.color_topbar_bg }}">
-        {% include 'customer-account-common-code' with 'table-header-code' %}
+        {% include 'customer-account-common-code' with 'table-header-code-fs' %}
+        <th class="text-center printModeExclude placeholdLoader">Action</th>
       </tr>
     </thead>
-    <tr w3-repeat="orders">
-      <th class="w3-text-orange1 orders text-center" id="{% raw %}{{id}}{% endraw %}"><a class="{% raw %}{{cancel_status}}{% endraw %}" href="/pages/order?id={% raw %}{{id}}{% endraw %}">{% raw %}{{order_name}}{% endraw %}</a></th>
-      <td class="text-center" title="{% raw %}{{customer_last_email}}{% endraw %}">{% raw %}{{customer_last_name}}{% endraw %}</td>
-      <td class="text-center">{% raw %}{{discount_codes}}{% endraw %}</td>
-      <td class="text-center">{% raw %}{{order_date}}{% endraw %}</td>
+    <tr class="w3-hover-light-grey" w3-repeat="orders">
+      <th class="w3-text-orange1 orders text-center" id="{% raw %}{{id}}{% endraw %}"><a class="{% raw %}{{cancel_status}}{% endraw %} placeholdLoader" href="/pages/order?id={% raw %}{{id}}{% endraw %}"><b>{% raw %}{{order_name}}{% endraw %}</b></a></th>
+      {% comment %}<td class="text-center" title="{% raw %}{{customer_last_email}}{% endraw %}"><div class="placeholdLoader">{% raw %}{{customer_first_name}} {{customer_last_name}}{% endraw %}</div></td>{% endcomment %}
+      <td class="text-center"><div class="placeholdLoader">{% raw %}{{company}}{% endraw %}</div></td>
+      <td class="text-center"><div class="placeholdLoader">${% raw %}{{spend}}{% endraw %}</div></td>
+      <td class="text-center"><div class="placeholdLoader">{% raw %}{{discount_codes}}{% endraw %}</div></td>
+      <td class="text-center"><div class="placeholdLoader">{% raw %}{{order_date}}{% endraw %}</div></td>
       {% comment %}<td>{% raw %}{{payment_status}}{% endraw %}</td>{% endcomment %}
       {% comment %}<td class="text-right">${% raw %}{{total}}{% endraw %}</td>{% endcomment %}
-      <td class="text-center">{% raw %}{{order_status}}{% endraw %}</td>
+      <td class="text-center" order_status="{% raw %}{{order_status}}{% endraw %}"><div class="placeholdLoader">{% raw %}{{order_status}}{% endraw %}</div></td>
+      <td class="text-center printModeExclude" style="width: 340px;">
+        <button class="js-toggle-edit-modal1 btn--secondary reviewBtn min-width-150 placeholdLoader" style="" title="Review this order" onclick="location.assign('/pages/order?id={% raw %}{{id}}{% endraw %}{% raw %}{{line_count}}{% endraw %}');" status="{% raw %}{{order_status}}{% endraw %}" status2="{% raw %}{{cancel_status}}{% endraw %}" order_id="{% raw %}{{id}}{% endraw %}" >Review Proofs</button>
+        <span class="">&nbsp;
+          <button class="btn btn-primary reorderBtn min-width-150 placeholdLoader" style="" title="Re-order" status="{% raw %}{{order_status}}{% endraw %}" status2="{% raw %}{{cancel_status}}{% endraw %}" order_id="{% raw %}{{id}}{% endraw %}" onclick="orderCreate({% raw %}{{id}}{% endraw %});">Re-Order</button>
+        </span>
+      </td>
     </tr>
   </table>
     
@@ -49,7 +59,7 @@
 
 <script>
    
-  {% include 'customer-account-common-code' with 'init-variables' %} 
+  {% include 'customer-account-common-code' with 'init-variables-fs' %} 
    
   $(document).ready(function() {
     
@@ -61,20 +71,22 @@
   });
   
   
-  {% include 'customer-account-common-code' with 'methods' %}
+  {% include 'customer-account-common-code' with 'methods-fs' %}
   
   
   function fetch_Orders(){
   
-    {% include 'customer-account-common-code' with 'fetchOrders-code' %}
+    {% include 'customer-account-common-code' with 'fetchOrders-code-fs' %}
+    defreez(); defreez(); $('.placeholdLoader1').addClass('placeholdLoader').removeClass('placeholdLoader1');
+    $('.table-wrapper').addClass('overflow-hidden');
                 
   	 $.ajax({
-          url: '/apps/pepsi-print/collection_response/get_orders_list.json',
+          url: '/apps/pepsi-print/fs_collection_response/get_orders_list.json',
           type: 'GET',
           data: data,
           dataType: 'json',
           success: function(data){
-//             	console.log(JSON.stringify(data));
+            	// console.log(JSON.stringify(data));
             	if(data["total_entries"] > 0){
                   calcT(data);
                   
@@ -86,22 +98,32 @@
                       });
                   });
                   
-                  setTimeout(w3DisplayData("id02", data),100);
+                  // setTimeout(w3DisplayData("id02", data),100);
                   $("#print-btn").removeAttr('disabled').prop('title', '').css('cursor', 'default');
-				}else{
-                  $("#id02, #paginationInit").hide();
-                  $("#order-none").show();
+
+                  $('.reviewBtn[status2 = "cancelled"], .reviewBtn[status="Order Not Assigned"]').prop("disabled", "disabled").prop('title', '').css('cursor', 'not-allowed');
+
+                  $('.reviewBtn[status = "Fulfilled"], .reviewBtn[status="In Production"]').prop('title', 'View Proofs').text('View Proofs');
+
+                  $('.reorderBtn[status2 = "cancelled"], .reorderBtn:not([status="Fulfilled"]):not([status="In Production"])').prop("disabled", "disabled").prop('title', '').css('cursor', 'not-allowed');
+      				}else{
+                  $("#id02, .per_pageContainer").hide();
+                  $("#order-none, #order-list").show();
                   $("#print-btn").prop('disabled','disabled').prop('title', 'No orders to print.').css('cursor', 'not-allowed');
                 }
-            	$.unblockUI();
+            	defreez();
+              $('.placeholdLoader').addClass('placeholdLoader1').removeClass('placeholdLoader');
+              $('.table-wrapper').removeClass('overflow-hidden');
                 
           },
           error: function(){
-            $.unblockUI; show_message2('Error in fetching Orders.',false);
+            defreez(); show_message2('Error in fetching Orders.',false);
           }
           
 	 	});
     
   }
+
+  {% include 'customer-account-common-code' with 'reorder-method' %}
   
 </script>
