--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -1,21 +1,23 @@
-{% paginate customer.addresses by 5 %}
-
+{% assign cols = 4 %}
+{% paginate customer.addresses by 12 %}
+  
+  <h1 class="w3-margin-0">{{ 'customer.addresses.title' | t }}</h1>
+  <hr>
   <div class="section-header section-header--large">
-    <h1 class="section-header__title section-header__title--left">{{ 'customer.account.title' | t }}</h1>
+    <div class="section-header__link--left">
+      <a class="btn" href="/account">{{ 'customer.account.return' | t }}</a>
+    </div>
     <div class="section-header__link--right">
-      <a href="#" class="btn" onclick="Shopify.CustomerAddress.toggleNewForm(); return false;">{{ 'customer.addresses.add_new' | t }}</a>
+      <a class="btn btn-primary" onclick="Shopify.CustomerAddress.toggleNewForm(); return false;">{{ 'customer.addresses.add_new' | t }}</a>
     </div>
   </div>
-
-  <p><a class="btn" href="/account">{{ 'customer.account.return' | t }}</a></p>
 
   {% comment %}
     Add address form, hidden by default
   {% endcomment %}
 
-  {% form 'customer_address', customer.new_address %}
+  {% comment %}{% form 'customer_address', customer.new_address %}
     <div id="AddAddress" {% unless form.errors %}style="display: none;"{% endunless %}>
-        <h2>{{ 'customer.addresses.add_new' | t }}</h2>
         {{ form.errors | default_errors }}
         <div class="grid">
 
@@ -35,7 +37,7 @@
       	{% if customer.tags contains Role_Printer %}
         <label for="AddressCompanyNew">{{ 'customer.addresses.company' | t }}</label>
         <input type="text" id="AddressCompanyNew" class="address_form" name="address[company]" value="{{form.company | default: customer.default_address.company}}" required="required" autocapitalize="words">
-		{% endif %}
+    		{% endif %}
       
         <label for="AddressAddress1New">{{ 'customer.addresses.address1' | t }}</label>
         <input type="text" id="AddressAddress1New" class="address_form" name="address[address1]" value="{{form.address1}}" autocapitalize="words">
@@ -79,105 +81,116 @@
         <p><a href="#" onclick="Shopify.CustomerAddress.toggleNewForm(); return false;">{{ 'customer.addresses.cancel' | t }}</a></p>
         <hr>
     </div>
-  {% endform %}
+  {% endform %}{% endcomment %}
 
-  <h2>{{ 'customer.addresses.title' | t }}</h2>
+  {% include 'magnificPopup-add-address' %}
 
   {% comment %}
     List all customer addresses with a unique edit form.
     Also add pagination in case they have a large number of address (unlikely)
   {% endcomment %}
 
-  {% for address in customer.addresses %}
+  <table class="responsive-table w3-table w3-bordered w3-margin-0">
+    {% tablerow address in customer.addresses cols: cols %}
+      <div class="w3-padding">
+        <h3 class="w3-margin-0">
+          {{ address.first_name | capitalize }} {{address.last_name | capitalize }}
+          {% if address == customer.default_address %}({{ 'customer.addresses.default' | t }}){% endif %}
+        </h3>
 
-    <h3>
-      {{ address.first_name | capitalize }} {{address.last_name | capitalize }}
-      {% if address == customer.default_address %}({{ 'customer.addresses.default' | t }}){% endif %}
-    </h3>
+        <p>
+          {{ address.company }}<br>
+          {{ address.street }}<br>
+          {{ address.city | capitalize }}, 
+          {% if address.province_code %}
+            {{ address.province_code | upcase }} 
+          {% endif %}
+          {{ address.zip | upcase }}<br>
+          {{ address.country }}<br>
+          {{ address.phone }}
+        </p>
 
-    <p>
-      {{ address.company }}<br>
-      {{ address.street }}<br>
-      {{ address.city | capitalize }}<br>
-      {% if address.province_code %}
-        {{ address.province_code | upcase }}<br>
-      {% endif %}
-      {{ address.zip | upcase }}<br>
-      {{ address.country }}<br>
-      {{ address.phone }}
-    </p>
-    <p>
-      {{ 'customer.addresses.edit' | t | edit_customer_address_link: address.id }} |
-      {{ 'customer.addresses.delete' | t | delete_customer_address_link: address.id }}
-    </p>
-    {% form 'customer_address', address %}
-      <div id="EditAddress_{{address.id}}" {% unless form.errors %}style="display:none;"{% endunless %}>
-        <hr>
-          <h4>{{ 'customer.addresses.edit_address' | t }}</h4>
-          {{ form.errors | default_errors }}
-          <div class="grid">
-            <div class="grid__item one-half small--one-whole">
-              <label for="AddressFirstName_{{form.id}}">{{ 'customer.addresses.first_name' | t }}</label>
-              <input type="text" id="AddressFirstName_{{form.id}}" class="address_form" name="address[first_name]" value="{{form.first_name}}" autocapitalize="words">
-            </div>
-  
-            <div class="grid__item one-half small--one-whole">
-              <label for="AddressLastName_{{form.id}}">{{ 'customer.addresses.last_name' | t }}</label>
-              <input type="text" id="AddressLastName_{{form.id}}" class="address_form" name="address[last_name]" value="{{form.last_name}}" autocapitalize="words">
-            </div>
-          </div>
-  
-          <label for="AddressCompany_{{form.id}}">{{ 'customer.addresses.company' | t }}</label>
-          <input type="text" id="AddressCompany_{{form.id}}" required="required" class="address_form" name="address[company]" value="{{form.company | default: customer.default_address.company}}" autocapitalize="words">
-  
-          <label for="AddressAddress1_{{form.id}}">{{ 'customer.addresses.address1' | t }}</label>
-          <input type="text" id="AddressAddress1_{{form.id}}" class="address_form" name="address[address1]" value="{{form.address1}}" autocapitalize="words">
-  
-          <label for="AddressAddress2_{{form.id}}">{{ 'customer.addresses.address2' | t }}</label>
-          <input type="text" id="AddressAddress2_{{form.id}}" class="address_form" name="address[address2]" value="{{form.address2}}" autocapitalize="words">
-  
-          <label for="AddressCity_{{form.id}}">{{ 'customer.addresses.city' | t }}</label>
-          <input type="text" id="AddressCity_{{form.id}}" class="address_form" name="address[city]" value="{{form.city}}" autocapitalize="words">
-  
-          <label for="AddressCountry_{{form.id}}">{{ 'customer.addresses.country' | t }}</label>
-          <select id="AddressCountry_{{form.id}}" name="address[country]" data-default="{{form.country}}">{{ country_option_tags }}</select>
-  
-          <div id="AddressProvinceContainer_{{form.id}}" style="display:none">
-            <label for="AddressProvince_{{form.id}}">{{ 'customer.addresses.province' | t }}</label>
-            <select id="AddressProvince_{{form.id}}" class="address_form" name="address[province]" data-default="{{form.province}}"></select>
-          </div>
-  
-          <div class="grid">
-            <div class="grid__item one-half small--one-whole">
-              <label for="AddressZip_{{form.id}}">{{ 'customer.addresses.zip' | t }}</label>
-              <input type="text" id="AddressZip_{{form.id}}" class="address_form" name="address[zip]" value="{{form.zip}}" autocapitalize="characters">
-            </div>
-  
-            <div class="grid__item one-half small--one-whole">
-              <label for="AddressPhone_{{form.id}}">{{ 'customer.addresses.phone' | t }}</label>
-              <input type="tel" id="AddressPhone_{{form.id}}" class="address_form" name="address[phone]" value="{{form.phone}}">
-            </div>
-          </div>
-  
-          <p>
-            {{ form.set_as_default_checkbox }}
-            <label for="address_default_address_{{form.id}}" class="inline">{{ 'customer.addresses.set_default' | t }}</label>
-          </p>
-  
-          <p><input type="submit" class="btn" value="{{ 'customer.addresses.update' | t }}"></p>
-          <p><a href="#" onclick="Shopify.CustomerAddress.toggleForm({{form.id}}); return false;">{{ 'customer.addresses.cancel' | t }}</a></p>
-  
-          <hr>
-        </div>
-      {% endform %}
+        <p class="w3-margin-0">
+          <b>{{ 'customer.addresses.edit' | t | edit_customer_address_link: address.id | replace: "href", 'class="w3-text-blue" href' }}</b> &nbsp;
+          <b>{{ 'customer.addresses.delete' | t | delete_customer_address_link: address.id | replace: "href", 'class="w3-text-red" href' }}</b>
+        </p>
 
-  {% endfor %}
+        {% comment %}{% form 'customer_address', address %}
+          <div id="EditAddress_{{address.id}}" {% unless form.errors %}style="display:none;"{% endunless %}>
+            <hr>
+              <h4>{{ 'customer.addresses.edit_address' | t }}</h4>
+              {{ form.errors | default_errors }}
+              <div class="grid">
+                <div class="grid__item one-half small--one-whole">
+                  <label for="AddressFirstName_{{form.id}}">{{ 'customer.addresses.first_name' | t }}</label>
+                  <input type="text" id="AddressFirstName_{{form.id}}" class="address_form" name="address[first_name]" value="{{form.first_name}}" autocapitalize="words">
+                </div>
+      
+                <div class="grid__item one-half small--one-whole">
+                  <label for="AddressLastName_{{form.id}}">{{ 'customer.addresses.last_name' | t }}</label>
+                  <input type="text" id="AddressLastName_{{form.id}}" class="address_form" name="address[last_name]" value="{{form.last_name}}" autocapitalize="words">
+                </div>
+              </div>
+      
+              <label for="AddressCompany_{{form.id}}">{{ 'customer.addresses.company' | t }}</label>
+              <input type="text" id="AddressCompany_{{form.id}}" required="required" class="address_form" name="address[company]" value="{{form.company | default: customer.default_address.company}}" autocapitalize="words">
+      
+              <label for="AddressAddress1_{{form.id}}">{{ 'customer.addresses.address1' | t }}</label>
+              <input type="text" id="AddressAddress1_{{form.id}}" class="address_form" name="address[address1]" value="{{form.address1}}" autocapitalize="words">
+      
+              <label for="AddressAddress2_{{form.id}}">{{ 'customer.addresses.address2' | t }}</label>
+              <input type="text" id="AddressAddress2_{{form.id}}" class="address_form" name="address[address2]" value="{{form.address2}}" autocapitalize="words">
+      
+              <label for="AddressCity_{{form.id}}">{{ 'customer.addresses.city' | t }}</label>
+              <input type="text" id="AddressCity_{{form.id}}" class="address_form" name="address[city]" value="{{form.city}}" autocapitalize="words">
+      
+              <label for="AddressCountry_{{form.id}}">{{ 'customer.addresses.country' | t }}</label>
+              <select id="AddressCountry_{{form.id}}" name="address[country]" data-default="{{form.country}}">{{ country_option_tags }}</select>
+      
+              <div id="AddressProvinceContainer_{{form.id}}" style="display:none">
+                <label for="AddressProvince_{{form.id}}">{{ 'customer.addresses.province' | t }}</label>
+                <select id="AddressProvince_{{form.id}}" class="address_form" name="address[province]" data-default="{{form.province}}"></select>
+              </div>
+      
+              <div class="grid">
+                <div class="grid__item one-half small--one-whole">
+                  <label for="AddressZip_{{form.id}}">{{ 'customer.addresses.zip' | t }}</label>
+                  <input type="text" id="AddressZip_{{form.id}}" class="address_form" name="address[zip]" value="{{form.zip}}" autocapitalize="characters">
+                </div>
+      
+                <div class="grid__item one-half small--one-whole">
+                  <label for="AddressPhone_{{form.id}}">{{ 'customer.addresses.phone' | t }}</label>
+                  <input type="tel" id="AddressPhone_{{form.id}}" class="address_form" name="address[phone]" value="{{form.phone}}">
+                </div>
+              </div>
+      
+              <p>
+                {{ form.set_as_default_checkbox }}
+                <label for="address_default_address_{{form.id}}" class="inline">{{ 'customer.addresses.set_default' | t }}</label>
+              </p>
+      
+              <p><input type="submit" class="btn" value="{{ 'customer.addresses.update' | t }}"></p>
+              <p><a href="#" onclick="Shopify.CustomerAddress.toggleForm({{form.id}}); return false;">{{ 'customer.addresses.cancel' | t }}</a></p>
+      
+              <hr>
+            </div>
+          {% endform %}{% endcomment %}
+
+        {% include 'magnificPopup-edit-address' %}
+      </div>
+    {% endtablerow %}
+  </table>
+  <br>
 
   {% if paginate.pages > 1 %}
   <div class="text-center">
     {% include 'pagination-custom' %}
   </div>
   {% endif %}
+
+  <style type="text/css">
+    td{ vertical-align: middle; width: {{ 100 | divided_by: cols }}%; }
+  </style>
 
   <script>
     // Initialize observers on address selectors
@@ -196,12 +209,20 @@
     Shopify.CustomerAddress = {
       toggleForm: function(id) {
         var editEl = document.getElementById('EditAddress_'+id);
+        if(editEl.style.display == 'none')
+          $('html, body').css('overflow','hidden');
+        else
+          $('html, body').css('overflow','auto');
         editEl.style.display = editEl.style.display == 'none' ? '' : 'none';
         return false;
       },
 
       toggleNewForm: function() {
         var el = document.getElementById('AddAddress');
+        if(el.style.display == 'none')
+          $('html, body').css('overflow','hidden');
+        else
+          $('html, body').css('overflow','auto');
         el.style.display = el.style.display == 'none' ? '' : 'none';
         return false;
       },
@@ -212,6 +233,10 @@
         }
       }
     }
+
+    $('form[id^="address"] [required]').each(function(o, i){
+      $(this).prev().append(' <small class="w3-text-red">*</small>');
+    });
   </script>
 
 {% endpaginate %}
