--- a/templates/page.register.liquid
+++ b/templates/page.register.liquid
@@ -1,24 +1,36 @@
+{% include 'customer-account-common-code' with 'theme-layout-code' %}
+
 <div class="grid">
-
+  {% assign bypass = false %}
   <div class="grid__item post-large--two-thirds push--post-large--one-sixth">
-
-    <div class="section-header  text-center">
-      <h1 class="section-header--title">{{ page.title }}</h1>
-    </div>
-
-    <div class="rte">
-      {{ page.content }}
-    </div>
-
+    
     <div>
       
       {% form 'contact' %}
 
-        {% if form.posted_successfully? %}
+        {% if form.posted_successfully? or bypass %}
+          {% if fs_shop_active %}
+          <div class="text-center">
+            <h1>Thank you for registering!<br><br>You will receive an email with your account details.</h1>
+            <br><br>
+            <a href="/account/login"><button class="btn btn-primary min-width-150" type="button">Login</button></a>
+          </div>
+          {% else %}
           <p class="note text-center form-success success-custom-color">
             {{ 'contact.form.post_success' | t }}
           </p>
+          {% endif %}
         {%else%}
+
+          <div class="section-header  text-center">
+            <h1 class="section-header--title">{{ page.title }}</h1>
+            <label for=""><span style="color: red;">* </span>Indicates Required Field</label>
+          </div>
+
+          <div class="rte">
+            {{ page.content }}
+          </div>
+
           {% if form.errors %}
           <div class="errorForm feedback">
             <!-- {{ form.errors.size }} or {{ form.errors | size }} -->
@@ -51,9 +63,6 @@
       
       	<label for="ContactFormZip" class="label--hidden1">{{ 'contact.form.zip' | t }}</label>
         <input id="ContactFormZip" required type="text" name="contact[zip]" valued="{{ shop.address.zip }}">
-      
-      	<label for="ContactFormCountry" class="label--hidden1">{{ 'contact.form.country' | t }}</label>
-        <input id="ContactFormCountry" required type="text" name="contact[country]" value="{{ shop.address.country }}">	
       
       	<label for="ContactFormProvince" class="label--hidden1">{{ 'contact.form.province' | t }}</label>
 <!--         <input id="ContactFormProvince" required type="text" name="contact[province]" valued="{{ shop.address.province }}"> -->
@@ -111,6 +120,42 @@
           <option style="color:#666; background-color:white;" value="WI">Wisconsin,  WI</option>
           <option style="color:#666; background-color:white;" value="WY">Wyoming,  WY</option>
         </select>
+
+        {% if fs_shop_active %}
+        <label for="ContactFormDivision" class="label--hidden1">{{ 'Division' }}</label>
+        <select name="contact[division]" id="ContactFormDivision" required="">
+          <option value="">Select</option>
+          <option value="Division:North">North</option>
+          <option value="Division:West">West</option>
+          <option value="Division:Central">Central</option>
+          <option value="Division:South">South</option>
+        </select>
+        
+        <label for="ContactFormLegacyRegion" class="label--hidden1">{{ 'Legacy Region' }}</label>
+        <select name="contact[legacy_region]" id="ContactFormLegacyRegion" required="">
+          <option style="color:#666; background-color:lightgray;" value="" selected disabled>Select</option>
+          <option style="color:#666;" value='LegacyRegion:NorthEast'>NorthEast</option>
+          <option style="color:#666;" value='LegacyRegion:SouthEast'>Sunbelt</option>
+          <option style="color:#666;" value='LegacyRegion:California'>California</option>
+          <option style="color:#666;" value='LegacyRegion:MidAtlantic'>Metro Atlantic</option>
+          <option style="color:#666;" value='LegacyRegion:Mountain'>Mountain</option>
+          <option style="color:#666;" value='LegacyRegion:MidWest'>MidWest</option>
+          <option style="color:#666;" value='LegacyRegion:S0uth'>South</option>
+          <option style="color:#666;" value='LegacyRegion:GreatLakes'>Great Lakes</option>
+        </select>
+
+        <label for="ContactFormChannel" class="label--hidden1">{{ 'Channel' }}</label>
+        <select name="contact[channel]" id="ContactFormChannel" required="">
+          <option value="">Select</option>
+          {% assign channels = "general.mod_channels" | t | split: "," %}
+          {% for channel in channels %}
+          <option value="Channel:{{ channel }}">{{ channel }}</option>
+          {% endfor %}
+        </select>
+        {% endif %}
+
+        <label for="ContactFormCountry" class="label--hidden1">{{ 'contact.form.country' | t }}</label>
+        <input id="ContactFormCountry" required type="text" name="contact[country]" value="{{ shop.address.country }}"> 
       
 {%comment%} 
         <label for="ContactFormCompanyName" class="label--hidden1">Company Name</label>
@@ -133,19 +178,24 @@
       	<select name="contact[Region]" title="Region" required oninvalid="this.setCustomValidity('Must select the region you are associated with.')" onchange="this.setCustomValidity('')" id="ContactFormRegion" style="color: #666;" onchange="this.style.color = '#000';" >
           <option style="color:#666; background-color:lightgray;" value="" selected disabled>Select Region</option>
           <option style="color:#666;" value='Region:NorthEast'>NorthEast</option>
-          <option style="color:#666;" value='Region:SouthEast'>SouthEast</option>
+          <option style="color:#666;" value='Region:SouthEast'>Sunbelt</option>
           <option style="color:#666;" value='Region:California'>California</option>
-          <option style="color:#666;" value='Region:MidAtlantic'>Mid-Atlantic</option>
+          <option style="color:#666;" value='Region:MidAtlantic'>Metro Atlantic</option>
           <option style="color:#666;" value='Region:Mountain'>Mountain</option>
           <option style="color:#666;" value='Region:MidWest'>MidWest</option>
           <option style="color:#666;" value='Region:S0uth'>South</option>
-		  <option style="color:#666;" value='Region:GreatLakes'>Great Lakes</option>
+    		  <option style="color:#666;" value='Region:GreatLakes'>Great Lakes</option>
         </select>
       	
       	<label for="ContactFormRole" class="label--hidden1">Do you have people reporting to you whose orders you would like to see ?</label>
-      	<select name="contact[userRole]" title="Role" required id="ContactFormRegion" style="color: #666;" onchange="this.style.color = '#000';" >
+      	<select name="contact[userRole]" title="Role" required id="ContactFormRegion" style="color: #666;" onchange="this.style.color = '#000';" > 
+          {% if fs_shop_active %}
+          <option style="color:#666;" value='Role:FSManager'>Yes</option>
+          <option style="color:#666;" selected value='Role:FSUser'>No</option>
+          {% else %}
           <option style="color:#666;" value='Role:UserManager'>Yes</option>
           <option style="color:#666;" selected value='Role:SiteUser'>No</option>
+          {% endif %}
         </select>
       
 		{% comment %}
@@ -171,7 +221,7 @@
       	{% endcomment %}
       
       	<div style="padding-top:50px;" class="text-center">
-        <input type="submit" class="btn" value="Submit Registration Request">
+        <input type="submit" class="btn btn-primary" value="Submit Registration Request">
           <br><br><a href="/account/login" class="btn">Cancel</a>
       	</div>
       {% endif %}
@@ -221,6 +271,12 @@
     data.customer["zip"] = $('#ContactFormZip').val();
     data.customer["country"] = $('#ContactFormCountry').val();
     data.customer["company"] = $('#ContactFormCompanyName').val();
+
+    {% if fs_shop_active %}
+    data.customer["division"] = $('#ContactFormDivision').val();
+    data.customer["legacy_region"] = $('#ContactFormLegacyRegion').val();
+    data.customer["channel"] = $('#ContactFormChannel').val();
+    {% endif %}
     
     formData = JSON.stringify(data);
     
@@ -228,9 +284,9 @@
     
     {% comment %}{% endcomment %}
     $.ajax({
-      url: '/apps/pepsi-print/customer/registration.json',
+      url: '/apps/pepsi-print/{%- if fs_shop_active -%}fs_{%- endif -%}customer/registration.json',
           type: 'POST',
-          data: JSON.stringify(data),
+          data: formData,
           dataType: 'json',
           contentType: "application/json;",
           statusCode: {
@@ -244,7 +300,7 @@
             	console.log(JSON.stringify(data));
             	
                 if(200 === Number(data.status)){ console.log("unbiding");
-                  if(formData.indexOf("test") == -1){
+                  if(formData.toLowerCase().indexOf("test") == -1){
                     $('#contact_form').unbind('submit').delay(500).submit();
                   }else{
                     show_message2("Test account created, activation link sent to your email. ",true);
@@ -252,16 +308,17 @@
                   }
                   	
                 }else if(401 === Number(data.status)){
-                  	$.unblockUI; show_message2(data.message,false);
+                	show_message2(data.message,false);
                 }else{
-                	$.unblockUI; show_message2(data.message,false); console.log('else');
+                	show_message2(data.message,false); 
+                  console.log('else');
                 }
            
             
             	
           },
           error: function(data){
-            $.unblockUI; show_message2('Some Error Occured.',false);
+            show_message2(((data.message != undefined) ? data.message : 'Some Error Occured.'),false);
           }
           
 	 });
